--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
+.header {
+  text-align: left;
+  padding: 50px;
+  background: RoyalBlue;
+  font-family: Helvetica, sans-serif;
+  color: white;
+}
 h1 {
-  text-align: center;
-  color: Aquamarine;
-  font-family: monospace;
+  font-size: 40px;
 }
-body{
-  background: grey;
-}
+
 .syncButton{
   height: 200px;
   width: 200px;
-  border: 2px solid blue;
+  border: 2px solid DeepSkyBlue;
   margin: 0 auto;
   margin-bottom: 10px;
   border-radius: 50px;
   transition: 0.5s;
 }
 .syncButton:hover {
-  background: yellow;
+  background: ;
 }
 .pushed {
-  background: yellow;
+  background: CornflowerBlue;
 }
