--- a/style.css
+++ b/style.css
@@ -1,12 +1,35 @@
 .header {
   text-align: left;
-  padding: 50px;
+  padding: 20px 30px;
   background: RoyalBlue;
   font-family: Helvetica, sans-serif;
   color: white;
 }
 h1 {
   font-size: 40px;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: PaleVioletRed;
+}
+
+.navbar a{
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.navbar a.right {
+  float: right;
+}
+
+.navbar a:hover {
+  background-color: white;
+  color: PaleVioletRed;
 }
 
 .syncButton{
@@ -18,6 +41,7 @@ h1 {
   border-radius: 50px;
   transition: 0.5s;
 }
+
 .syncButton:hover {
   background: ;
 }
