--- a/style.css
+++ b/style.css
@@ -57,18 +57,33 @@ h1 {
   padding: 20px;
 }
 .syncButton{
-  height: 200px;
-  width: 200px;
-  border: 2px solid DeepSkyBlue;
+  height: 40px;
+  width: 100px;
+  border:2px solid purple;
   margin: 0 auto;
   margin-bottom: 10px;
-  border-radius: 50px;
   transition: 0.5s;
+  text-align: center;
 }
 
 .syncButton:hover {
-  background: ;
+  background: lightblue;
 }
 .pushed {
   background: CornflowerBlue;
+}
+
+.submitButton {
+  height: 40px;
+  width: 100px;
+  border:2px solid purple;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  transition: 0.5s;
+  text-align: center;
+}
+
+.submitButton:hover {
+  background: lightblue;
+
 }
