--- a/style.css
+++ b/style.css
@@ -8,28 +8,92 @@
 h1 {
   font-size: 40px;
 }
-
-.navbar {
-  overflow: hidden;
-  background-color: PaleVioletRed;
+h2{
+  font-size: 22px;
+  font-family: Helvetica, sans-serif;
 }
 
-.navbar a{
+label{
+  font-family: Helvetica, sans-serif;
+}
+* {box-sizing: border-box;}
+
+/* Style the navbar */
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+/* Navbar links */
+.topnav a {
   float: left;
   display: block;
-  color: white;
+  color: black;
   text-align: center;
-  padding: 10px 20px;
+  padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
+  font-family: Helvetica, sans-serif;
 }
 
-.navbar a.right {
+/* Navbar links on mouse-over */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Active/current link */
+.topnav a.active {
+  background-color: RoyalBlue;
+  color: white;
+}
+
+/* Style the input container */
+.topnav .login-container {
   float: right;
 }
 
-.navbar a:hover {
-  background-color: white;
-  color: PaleVioletRed;
+/* Style the input field inside the navbar */
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  width: 150px; /* adjust as needed (as long as it doesn't break the topnav) */
+}
+
+/* Style the button inside the input container */
+.topnav .login-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .login-container button:hover {
+  background: #ccc;
+}
+
+/* Add responsiveness - On small screens, display the navbar vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav .login-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .login-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
 }
 
 * {
@@ -53,37 +117,22 @@ h1 {
 .main {
   -ms-flex: 70%;
   flex: 70%;
-  background-color: salmon;
+  background-color:  RoyalBlue;
   padding: 20px;
 }
 .syncButton{
-  height: 40px;
-  width: 100px;
-  border:2px solid purple;
+  height: 200px;
+  width: 200px;
+  border: 2px solid DeepSkyBlue;
   margin: 0 auto;
   margin-bottom: 10px;
+  border-radius: 50px;
   transition: 0.5s;
-  text-align: center;
 }
 
 .syncButton:hover {
-  background: lightblue;
+  background: ;
 }
 .pushed {
   background: CornflowerBlue;
-}
-
-.submitButton {
-  height: 40px;
-  width: 100px;
-  border:2px solid purple;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  transition: 0.5s;
-  text-align: center;
-}
-
-.submitButton:hover {
-  background: lightblue;
-
 }
