--- a/style.css
+++ b/style.css
@@ -2,30 +2,34 @@ html, body {
   padding: 0;
   margin: 0;
 }
+
 .header {
   text-align: left;
   padding: 20px 30px;
-  background: RoyalBlue;
+  background: rgb(23, 51, 79);
   font-family: Helvetica, sans-serif;
-  color: white;
+  color: rgb(177, 217, 231);
 }
 h1 {
   font-size: 40px;
 }
 h2{
-  font-size: 22px;
+  font-size: 30px;
   font-family: Helvetica, sans-serif;
+  color: rgb(23, 51, 79);
 }
 
 label{
   font-family: Helvetica, sans-serif;
+  color: rgb(252, 241, 207)
+
 }
 * {box-sizing: border-box;}
 
 /* Style the navbar */
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
+  background-color: rgb(177, 217, 231);
 }
 
 /* Navbar links */
@@ -114,7 +118,7 @@ label{
 .side {
   -ms-flex: 30%;
   flex: 30%;
-  background-color: #f1f1f1;
+  background-color: rgb(252, 241, 207);
   padding: 20px;
 }
 
